styles.css
:root {
    --bg-body: rgb(15, 15, 15);
    --bg-container: rgb(27, 30, 26);
    --hover: rgb(70, 81, 93);
    --text1: rgb(255, 255, 255);
    --text2: rgb(157, 155, 155);
    --text-highlight: rgb(214, 104, 0);
    --border: rgb(183, 180, 180);
    --border-opaque: rgba(183, 180, 180, 0.5);
    --fs-body: 100%;
    --lh-body: 1.56;
}

html {
    box-sizing: border-box;
    font-size: 100%;
}

body {
    margin: 0;
    font-family: "Roboto Slab", sans-serif;
    background-color: var(--bg-body);
    color: var(--text1);
    font-size: var(--fs-body);
    line-height: var(--lh-body);
}

h2 {
    font-weight: 400;
}

p {
  word-wrap: break-word;
  font-weight: 200;
}

figure {
    font-size: 80%;
    color: var(--text2);
    text-align: center;
}

/* Responsive layout */
@media screen and (max-width: 700px) {
    .container, .menu, .row {
        flex-direction: column;
    }
}   

.sidenav {
    display: flex;
    flex-direction: column;
    max-width: 100px;
    height: 100%;
    position: fixed;
    z-index: 1;
    background-color: var(--bg-body);
    border-right: 1px solid var(--border-opaque);
    /* border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
    border-top: 1px solid var(--border-opaque);
    border-bottom: 1px solid var(--border-opaque); */
    padding: 10px;
    background-color: var(--bg-body);
    overflow-x: hidden;
}

/* Top header and menu */
header {
    display: flex;
    flex-direction: column;
    background-color: var(--bg-container);
    text-align: center;
    padding: 10px;
}

.menu {
    position: sticky;
    width: 100%;
    top: 0;
    display: flex;
    flex-direction: row;
    justify-content: center;
    background-color: var(--bg-container);
    border-bottom: 1px solid var(--border-opaque);
}

/* Links */
a:link {
    color: var(--text2);
    text-decoration: none;
    padding: 10px;
}

a:hover {
    color: var(--hover) !important;
}

a:visited {
    color: var(--text2);
}

.top-arrow {
    position: fixed;
    bottom: 0;
    right: 0;
    width: 60px;
    height: auto;
    margin: 10px;
}

/* Row and columns */
.row {
    display: flex;
    flex-direction: row;
}

.column {
    padding: 10px;
}   

.column.middle {
  display: flex;
  flex-direction: column;
}

/* Projects */
div.project-header {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    background-color: var(--bg-body);
    padding-left: 10px;
    padding-right: 10px;
    text-align: center;
}

.cards {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    background-color: var(--bg-body);
}

.card {
    display: flex;
    max-width: 300px;
    flex-direction: column;
    border: 1px solid var(--border-opaque);
    background-color: var(--bg-container);
    color: var(--text1);
    margin: 10px;
}

.card-header1 {
    text-align: center;
}

.card-content {
    text-align: center;
    padding-left: 5px;
    padding-right: 5px;
    color: var(--text1);
}

/* About */
div.about {
    /* background-color: var(--bg-container); */
    color: var(--text1);
    border-top: 1px solid var(--border-opaque);
    border-bottom: 1px solid var(--border-opaque);
    margin: 30px;
    text-align: center;
    padding: 20px;
}

/* Project page */
div.project-description {
    display: flex;
    flex-direction: column;
    margin-left: 170px;
    margin-right: 170px;
}

.project-description div.text-block {
    padding-left: 50px;
    padding-bottom: 10px;
    padding-top: 10px;
    border-bottom: 1px solid var(--border-opaque);
}

.project-description div.list {
    padding-left: 20px;
    font-weight: 200;
}

img {
    max-width: 900px;
    height: auto;
}

/* Footer */
footer {
    border-top: 1px solid var(--border-opaque);
    background-color: var(--bg-container);
    text-align: center;
    padding: 10px;
    font-size: 70%;
    color: var(--text2);
}

